Fixed content size in main window

--- a/content/personal_profile.html
+++ b/content/personal_profile.html
@@ -19,7 +19,12 @@
       </div>
 
       <div id="mainwindow">
-        <p>Personal Profile</p>
+        <div id="content">
+          <h1>Personal Profile</h1>
+          <article>
+            <section></section>
+          </article>
+        </div>
       </div>
 
       <div id=footer></div>
