--- a/content/project_idea.html
+++ b/content/project_idea.html
@@ -19,7 +19,12 @@
       </div>
 
       <div id="mainwindow">
-        <p>Project Idea</p>
+        <div id="content">
+          <h1>Project Idea</h1>
+          <article>
+            <section></section>
+          </article>
+        </div>
       </div>
 
       <div id=footer></div>
