Content transferred from doc into webpages

--- a/content/ideal_job.html
+++ b/content/ideal_job.html
@@ -33,7 +33,9 @@
         </div>
       </div>
 
-      <div id=footer></div>
+      <div id=footer>
+        <p>Jake Kent | Student Number: s3905550 |Student Email: s3905550@student.rmit.edu.au</p>
+      </div>
     </div>
   </body>
 
