--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <p>Hi, I’m Jake!</p>
               <p>I’m an aspiring web developer and all around IT man who grew up in a small town in Wollondilly Shire, NSW called Menangle. After finishing school in 2010 I held a job as a leading hand in a warehouse for a few years and studied a Diploma of Music (Composition and Music Production) at the Australian Institute of Music, before moving to Sydney to take a job as a stock controller at a hotel.</p>
               <p>While working I found a love for problem solving and data analysis and decided that the right field for me to be in would be IT, where those skills are heavily relied upon. In effort to pursue my desire to get a job in the IT field I obtained my Diploma of Information Technology through TAFE Digital in 2020, and in March 2021 began a bachelor degree through RMIT via Open Universities.</p>
-              <p>In my spare time I like to grow chilis, add a healthy amount to every meal I cook, and slowly learn Spanish to communicate with work colleagues and friends.</p>
+              <p>In my spare time I like to grow chilis, addding a healthy amount to every meal I cook. I also try to slowly learn Spanish to communicate with work colleagues and friends.</p>
             </article>
 
             <article id="interest_in_it">
@@ -57,7 +57,9 @@
         </div>
       </div>
 
-      <div id=footer></div>
+      <div id=footer>
+        <p>Jake Kent | Student Number: s3905550 |Student Email: s3905550@student.rmit.edu.au</p>
+      </div>
     </div>
   </body>
 
