--- a/content/project_idea.html
+++ b/content/project_idea.html
@@ -22,12 +22,96 @@
         <div id="content">
           <h1>Project Idea</h1>
           <article>
-            <section></section>
+            <section id="project_overview">
+              <h2>Overview</h2>
+              <p>The aim of this IT project is to develop a smartphone app for Android that conveniently packages a set of tools and trackers that are designed to increase productivity and positive mental wellbeing for users. The app will track usage of each productivity tool and give a visual representation of the user’s progress at intervals requested by the user. Users will also be able to set goal benchmarks to strive for, and the app will provide tips and resources to assist those that are struggling or want more information about the benefits behind each technique.</p>
+            </section>
+            <section id="project_motivation">
+              <h2>Motivation</h2>
+              <p>Behind this app is my own motivation for fitting more things into each day and the desire to stay relaxed while being as productive as possible. As a person who has struggled with mental health and motivation issues throughout my life, it is a desire of mine to assist anyone struggling in similar situations by providing them with the tools and knowledge that I have used to improve my own situation. As it says in the Dao De Jing: “a journey of a thousand miles begins with a single step.” It would be a significant thing to me to help people take their first step. </p>
+            </section>
+            <section id="project_description">
+              <h2>Description</h2>
+              <p>Separated into two sections, the app will provide tools and techniques designed to target productivity and wellbeing. The techniques and tools will be based on well known and proven practices which in some cases have been used for thousands of years.</p>
+              <table>
+                <tr>
+                  <td>Productivity</td>
+                  <td>Wellbeing</td>
+                </tr>
+                <tr>
+                  <td>Pomodoro Techniqe Timer</td>
+                  <td>Meditation Timer</td>
+                </tr>
+                <tr>
+                  <td>To Do List</td>
+                  <td>Breathing Exercises</td>
+                </tr>
+                <tr>
+                  <td>Eisenhower Matrix</td>
+                  <td></td>
+                </tr>
+              </table>
+              <h3>Pomodoro Technique Timer:</h3>
+              <p>The Pomodoro Technique Timer will be a simple timing/stopwatch style function which takes a user defined time (the goal time to be committed to the task at hand), and then divides that time into four blocks. At the end of each of the smaller blocks a bell will chime, however on the fourth chime the user will be prompted to take a short break for 3-5 minutes before resuming activity and resetting the timer.</p>
+              <h3>To Do List:</h3>
+              <p>The To Do List will be a basic dot point list format with check marks that denote a task as completed or incomplete.</p>
+              <h3>Eisenhower Matrix:</h3>
+              <p>The Eisenhower Matrix wil provider the user with a 2x2 grid where the user can add text to each grid cell to nominate tasks that fit the criteria of each cell:</p>
+                <table>
+                  <tr>
+                    <td>Important and Urgent</td>
+                    <td>Important but Not Urgent</td>
+                  </tr>
+                  <tr>
+                    <td>Not Important but Urgent</td>
+                    <td>Not Important and Not Urgent</td>
+                  </tr>
+                </table>
+              <p>
+                Organising tasks in this way aid in prioritisation of tasks.
+              </p>
+              <h3>Meditation Timer:</h3>
+              <p>The Meditation Timer will be a simple countdown timer where the user sets a goal time and selects from a range of ambient noise tracks that play softly in the background behind the timer. The ambient sound will be collected from a sound library, and embrace moods such as rainy, blizzard, bird sounds, meditation bells etc.</p>
+              <h3>Breathing Exercises:</h3>
+              <p>Breathing Exercises will be chosen from a list of 3 techniques: Square Breathing, Resonant Breathing, and Wim Hof Method breathing. The app will present simple text instructions on how to perform each method comfortably, and then a metronome will tick at the user’s chosen tempo. The metronome will instruct the user when to inhale and exhale.</p>
+              <br>
+              <p>The application will mostly center around a simple time module inherent in Python and an audio output module that will provide the user with atmosphere, such as ambient noise, and cues, such as bell chimes to signal points in their chosen process.</p>
+              <p>Data will be saved in hidden user files for access when the user wishes to view previous records. The data will be recorded in a CSV file format, so that should the user can have the ability to take their data and view or import it into other software should they choose to.</p>
+              <p>The application will take a modern and minimalistic approach to colour and layout, with a mostly monochromatic design centering around a single highlight colour.</p>
+              <p>Settings and customisation in the application will initially be very limited. Initially the only controls provided will be a choice of where your record file will be stored, and a choice between light mode or dark mode in terms of colour scheme.</p>
+            </section>
+            <section id="project_tt">
+              <h2>Tools and Technologies</h2>
+              <p>To build this app in Python a number of built-in and external libraries, and also the mobile hardware for testing will be required.</p>
+              <p>Computers: To develop the application on.</p>
+              <p>Mobile devices (phones/tablets): To test the application during development.</p>
+              <p>Preferred Python IDE: To build and execute our Python code, I prefer PyCharm.</p>
+              <p>Kivy: A Python library that is used to develop cross-platform applications. Kivy is compatible with Android, iOS, Windows, Linux, and MacOS, and provides flexible UI elements to keep the app looking modern.</p>
+              <p>Time: A built-in Python library that interfaces with the device’s internal clock.</p>
+              <p>OS: A built-in Python library that will enable the app to interact with the device’s file system. This will be required to save and retrieve any files that track the user’s progress.</p>
+              <p>playsound: A Python library used to output audio from a file.</p>
+              <p>Pandas: A Python library used for data analysis, this would be used in combination with the saved user progress files to show detailed graphs.</p>
+            </section>
+            <section id="project_skills">
+              <h2>Skill Requirement</h2>
+              <p>To complete this project it would be essential to be comfortable developing applications with Python and having a good amount of experience analysing data with Pandas. Developers would also need to be familiar with developing mobile applications and using Kivy as a base for their mobile applications.
+</p>
+              <p>In addition it would be necessary to have a decent knowledge of accessible UI/UX design and understand the technical limitations and differences between the different types of mobile devices and operating systems.</p>
+              <p>It would be beneficial but not essential for developers on this project to be familiar with audio file formats and conversions between formats when an audio source is provided in an incompatible format.</p>
+              <p>Finding developers with experience using Kivy may be difficult, however this is balanced by the plethora of developers with experience in Pandas and the free nature of Python related development software. The availability and cheap cost of mobile devices will make this project easy to test.</p>
+            </section>
+            <section id="project_outcome">
+              <h2>Outcome</h2>
+              <p>At the end of this project a functional mobile application will be produced that can provide users with some basic assistance in their daily life though enabling and encouraging healthy productivity and mental health habits. Users who take advantage of the methods provided in the application will be able to increase their output and feel more at ease while moving through daily life.</p>
+              <p>As the project itself is ultimately quite a simple framework it would serve as a great foundation from which to build in extra features and productivity methods, such as including licence free lectures from productivity experts.</p>
+            </section>
           </article>
         </div>
       </div>
 
-      <div id=footer></div>
+      <div id=footer>
+        <p>Jake Kent | Student Number: s3905550 |Student Email: s3905550@student.rmit.edu.au</p>
+      </div>
     </div>
   </body>
 
