fix personal profile

--- a/content/personal_profile.html
+++ b/content/personal_profile.html
@@ -20,7 +20,7 @@
 
       <div id="mainwindow">
         <div id="content">
-          <h1>Personal Profile</h1>
+          <h1>Personal Profile1</h1>
           <article>
             <section id="personality_tests">
               <table>
