--- a/content/personal_profile.html
+++ b/content/personal_profile.html
@@ -4,6 +4,7 @@
   <head>
     <link rel='stylesheet' type='text/css' href='../css/page_layout.css'>
     <link rel='stylesheet' type='text/css' href='../css/font_styles.css'>
+    <link rel='stylesheet' type='text/css' href='../css/image_styles.css'>
 
   </head>
 
@@ -26,7 +27,8 @@
               <table>
                 <tr>
                   <td>
-                    <img src="">
+                    <img id="myer_briggs_img" src="../images/Myer-Briggs Test.png">
+                    <img id="myer_briggs_img2" src="../images/Myer-Briggs2.png">
                   </td>
                   <td>
                     <p class="question">What do the results of these tests mean for you?</p>
@@ -44,7 +46,7 @@ In future team situations I will definitely attempt to alter this behaviour to a
                 </tr>
                 <tr>
                   <td>
-                    <img src="">
+                    <img id="learning_styles" src="../images/Learning-Styles.png">
                   </td>
                   <td>
                     <p class="question">What do the results of these tests mean for you?</p>
@@ -59,7 +61,7 @@ In future team situations I will definitely attempt to alter this behaviour to a
                 </tr>
                 <tr>
                   <td>
-                    <img src="">
+                    <img id="leadership_style" src="../images/leadership-quiz.png">
                   </td>
                   <td>
                     <p class="question">What do the results of these tests mean for you?</p>
