--- a/content/project_idea.html
+++ b/content/project_idea.html
@@ -4,6 +4,7 @@
   <head>
     <link rel='stylesheet' type='text/css' href='../css/page_layout.css'>
     <link rel='stylesheet' type='text/css' href='../css/font_styles.css'>
+    <link rel='stylesheet' type='text/css' href='../css/image_styles.css'>
 
   </head>
 
