--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <link rel='stylesheet' type='text/css' href='./css/page_layout.css'>
     <link rel='stylesheet' type='text/css' href='./css/font_styles.css'>
+    <link rel='stylesheet' type='text/css' href='./css/image_styles.css'>
 
   </head>
 
@@ -25,7 +26,7 @@
               <table>
                 <tr>
                   <td>
-                    <img src="">
+                    <img id="my_photo" src="./images/me.jpg" alt="photo of Jake">
                   </td>
                   <td>
                     <p>Name: Jake Kent</p>
