Adjusted tabled formatting, added job .pdf

--- a/content/personal_profile.html
+++ b/content/personal_profile.html
@@ -31,6 +31,7 @@
                     <img id="myer_briggs_img2" src="../images/Myer-Briggs2.png">
                   </td>
                   <td>
+                    <h2>Myer-Briggs Personality Test</h2>
                     <p class="question">What do the results of these tests mean for you?</p>
                     <p class="answer">For me the results of the Myer-Briggs test were seemingly quite accurate. The advocate INFJ-T personality type spotlighted my sense and struggle with attempting to be idealistic while also pragmatic and true to myself.
 The test particularly described some sore point that will take some work to change, like working too hard for too long without rest, and trying to improve too much too quickly.
@@ -41,7 +42,7 @@ In future team situations I will definitely attempt to alter this behaviour to a
 </p>
                     <p class="question">How should you take this into account when forming a team?</p>
                     <p class="answer">When forming a team I aim to take a role that is supervisory so that I am responsible for a significant contingent of work. While I know that I can handle taking the responsibility of the workload, I feel that I am also able to pragmatically dissect the work for others into smaller portions and assess the skill levels of my team members to be able to complete the tasks on time. I will have to be more conscious of the amount of work I take and not to take too much of what could more effectively be delegated.</p>
-                    </p>
+                    <a href="https://www.16personalities.com/">Take the Test</a>
                   </td>
                 </tr>
                 <tr>
@@ -49,6 +50,7 @@ In future team situations I will definitely attempt to alter this behaviour to a
                     <img id="learning_styles" src="../images/Learning-Styles.png">
                   </td>
                   <td>
+                    <h2>Learning Styles Test</h2>
                     <p class="question">What do the results of these tests mean for you?</p>
                     <p class="answer">For me the results of the learning style test have shown me that I should focus more on proactively problem solving, rather than instituting a solution and reflecting on the result afterwards. I may be able to save myself work by thinking out better alternative solutions to problems before picking a solution to start on.</p>
                     <p class="question">How do you think these results may influence your behaviour in a team?
@@ -57,6 +59,7 @@ In future team situations I will definitely attempt to alter this behaviour to a
 </p>
                     <p class="question">How should you take this into account when forming a team?</p>
                     <p class="answer">When forming a team I should take into account the attitudes of potential team members and how responsive they are to differing ideas and speculations. It would serve the project better for me to be working with team members who are receptive and I feel will comfortably receive my suggestions or at least be able to logically describe the benefits of the chosen solution.</p>
+                    <a href="http://emtrain.eu/learning-styles/">Take the Test</a>
                   </td>
                 </tr>
                 <tr>
@@ -64,6 +67,7 @@ In future team situations I will definitely attempt to alter this behaviour to a
                     <img id="leadership_style" src="../images/leadership-quiz.png">
                   </td>
                   <td>
+                    <h2>Interactive Leadership Style Assessment</h2>
                     <p class="question">What do the results of these tests mean for you?</p>
                     <p class="answer">For me the results of this test displayed my focus on trying to be personable while also leading or supervising among my work teams. I feel that the leadership test showed how I target my attention towards being there for my team during the good and bad projects, and am also able to encourage and keep a good rapport with my teammates.
 </p>
@@ -71,6 +75,7 @@ In future team situations I will definitely attempt to alter this behaviour to a
                     <p class="answer">In a team I think I will now focus more on how I can better connect with people and empower them to do their best. In the future I will strive to place myself in more front-line leadership roles and focus on being there for team members in need.</p>
                     <p class="question">How should you take this into account when forming a team</p>
                     <p class="answer">When forming a team I will put my hand up for leadership positions, especially when other members feel uncomfortable in the role. I will also make an effort to be available to team members whenever they are having issues or are just finding the workload too intensive.</p>
+                    <a href="https://eml.usc.edu/leadership-style-quiz">Take the Test</a>
                   </td>
                 </tr>
               </table>
@@ -80,7 +85,7 @@ In future team situations I will definitely attempt to alter this behaviour to a
       </div>
 
       <div id=footer>
-        <p>Jake Kent | Student Number: s3905550 |Student Email: s3905550@student.rmit.edu.au</p>
+        <p>Jake Kent | Student Number: s3905550 | Student Email: s3905550@student.rmit.edu.au</p>
       </div>
     </div>
   </body>
