--- a/content/project_idea.html
+++ b/content/project_idea.html
@@ -26,18 +26,20 @@
             <section id="project_overview">
               <h2>Overview</h2>
               <p>The aim of this IT project is to develop a smartphone app for Android that conveniently packages a set of tools and trackers that are designed to increase productivity and positive mental wellbeing for users. The app will track usage of each productivity tool and give a visual representation of the user’s progress at intervals requested by the user. Users will also be able to set goal benchmarks to strive for, and the app will provide tips and resources to assist those that are struggling or want more information about the benefits behind each technique.</p>
+              <br>
             </section>
             <section id="project_motivation">
               <h2>Motivation</h2>
               <p>Behind this app is my own motivation for fitting more things into each day and the desire to stay relaxed while being as productive as possible. As a person who has struggled with mental health and motivation issues throughout my life, it is a desire of mine to assist anyone struggling in similar situations by providing them with the tools and knowledge that I have used to improve my own situation. As it says in the Dao De Jing: “a journey of a thousand miles begins with a single step.” It would be a significant thing to me to help people take their first step. </p>
+              <br>
             </section>
             <section id="project_description">
               <h2>Description</h2>
               <p>Separated into two sections, the app will provide tools and techniques designed to target productivity and wellbeing. The techniques and tools will be based on well known and proven practices which in some cases have been used for thousands of years.</p>
               <table>
                 <tr>
-                  <td>Productivity</td>
-                  <td>Wellbeing</td>
+                  <td><h3>Productivity</h3></td>
+                  <td><h3>Wellbeing</h3></td>
                 </tr>
                 <tr>
                   <td>Pomodoro Techniqe Timer</td>
@@ -80,18 +82,20 @@
               <p>Data will be saved in hidden user files for access when the user wishes to view previous records. The data will be recorded in a CSV file format, so that should the user can have the ability to take their data and view or import it into other software should they choose to.</p>
               <p>The application will take a modern and minimalistic approach to colour and layout, with a mostly monochromatic design centering around a single highlight colour.</p>
               <p>Settings and customisation in the application will initially be very limited. Initially the only controls provided will be a choice of where your record file will be stored, and a choice between light mode or dark mode in terms of colour scheme.</p>
+              <br>
             </section>
             <section id="project_tt">
               <h2>Tools and Technologies</h2>
               <p>To build this app in Python a number of built-in and external libraries, and also the mobile hardware for testing will be required.</p>
-              <p>Computers: To develop the application on.</p>
-              <p>Mobile devices (phones/tablets): To test the application during development.</p>
-              <p>Preferred Python IDE: To build and execute our Python code, I prefer PyCharm.</p>
-              <p>Kivy: A Python library that is used to develop cross-platform applications. Kivy is compatible with Android, iOS, Windows, Linux, and MacOS, and provides flexible UI elements to keep the app looking modern.</p>
-              <p>Time: A built-in Python library that interfaces with the device’s internal clock.</p>
-              <p>OS: A built-in Python library that will enable the app to interact with the device’s file system. This will be required to save and retrieve any files that track the user’s progress.</p>
-              <p>playsound: A Python library used to output audio from a file.</p>
-              <p>Pandas: A Python library used for data analysis, this would be used in combination with the saved user progress files to show detailed graphs.</p>
+              <p><a class="bold">Computers:</a> To develop the application on.</p>
+              <p><a class="bold">Mobile devices (phones/tablets):</a> To test the application during development.</p>
+              <p><a class="bold">Preferred Python IDE:</a> To build and execute our Python code, I prefer PyCharm.</p>
+              <p><a class="bold">Kivy:</a> A Python library that is used to develop cross-platform applications. Kivy is compatible with Android, iOS, Windows, Linux, and MacOS, and provides flexible UI elements to keep the app looking modern.</p>
+              <p><a class="bold">Time:</a> A built-in Python library that interfaces with the device’s internal clock.</p>
+              <p><a class="bold">OS:</a> A built-in Python library that will enable the app to interact with the device’s file system. This will be required to save and retrieve any files that track the user’s progress.</p>
+              <p><a class="bold">playsound:</a> A Python library used to output audio from a file.</p>
+              <p><a class="bold">Pandas:</a> A Python library used for data analysis, this would be used in combination with the saved user progress files to show detailed graphs.</p>
+              <br>
             </section>
             <section id="project_skills">
               <h2>Skill Requirement</h2>
@@ -100,18 +104,20 @@
               <p>In addition it would be necessary to have a decent knowledge of accessible UI/UX design and understand the technical limitations and differences between the different types of mobile devices and operating systems.</p>
               <p>It would be beneficial but not essential for developers on this project to be familiar with audio file formats and conversions between formats when an audio source is provided in an incompatible format.</p>
               <p>Finding developers with experience using Kivy may be difficult, however this is balanced by the plethora of developers with experience in Pandas and the free nature of Python related development software. The availability and cheap cost of mobile devices will make this project easy to test.</p>
+              <br>
             </section>
             <section id="project_outcome">
               <h2>Outcome</h2>
               <p>At the end of this project a functional mobile application will be produced that can provide users with some basic assistance in their daily life though enabling and encouraging healthy productivity and mental health habits. Users who take advantage of the methods provided in the application will be able to increase their output and feel more at ease while moving through daily life.</p>
               <p>As the project itself is ultimately quite a simple framework it would serve as a great foundation from which to build in extra features and productivity methods, such as including licence free lectures from productivity experts.</p>
+              <br>
             </section>
           </article>
         </div>
       </div>
 
       <div id=footer>
-        <p>Jake Kent | Student Number: s3905550 |Student Email: s3905550@student.rmit.edu.au</p>
+        <p>Jake Kent | Student Number: s3905550 | Student Email: s3905550@student.rmit.edu.au</p>
       </div>
     </div>
   </body>
