Changed my photo resolution

--- a/content/personal_profile.html
+++ b/content/personal_profile.html
@@ -10,7 +10,7 @@
 
   <body>
     <div id="wrapper">
-      <div id="banner"></div>
+      <div id="banner"><p>Jake Kent - Personal Profile</p></div>
 
       <div id="navbar">
         <button id="personal_information" onclick="window.location.href='../index.html'">Personal Information</button>
