--- a/content/project_idea.html
+++ b/content/project_idea.html
@@ -10,7 +10,7 @@
 
   <body>
     <div id="wrapper">
-      <div id="banner"></div>
+      <div id="banner"><p>Jake Kent - Personal Profile</p></div>
 
       <div id="navbar">
         <button id="personal_information" onclick="window.location.href='../index.html'">Personal Information</button>
@@ -78,8 +78,8 @@
               <h3>Breathing Exercises:</h3>
               <p>Breathing Exercises will be chosen from a list of 3 techniques: Square Breathing, Resonant Breathing, and Wim Hof Method breathing. The app will present simple text instructions on how to perform each method comfortably, and then a metronome will tick at the user’s chosen tempo. The metronome will instruct the user when to inhale and exhale.</p>
               <br>
-              <p>The application will mostly center around a simple time module inherent in Python and an audio output module that will provide the user with atmosphere, such as ambient noise, and cues, such as bell chimes to signal points in their chosen process.</p>
-              <p>Data will be saved in hidden user files for access when the user wishes to view previous records. The data will be recorded in a CSV file format, so that should the user can have the ability to take their data and view or import it into other software should they choose to.</p>
+              <p>Built on the Python framework Kivy, the application will center around a simple time module inherent in Python and an audio output module that will provide the user with atmosphere, such as ambient noise, and cues, such as bell chimes, to notify the user about time left in their chosen practice.</p>
+              <p>Data will be saved in hidden user files for access when the user wishes to view previous records. The data will be recorded in a CSV file format, so that the user can have the ability to take their data and view or import it into other software should they choose to.</p>
               <p>The application will take a modern and minimalistic approach to colour and layout, with a mostly monochromatic design centering around a single highlight colour.</p>
               <p>Settings and customisation in the application will initially be very limited. Initially the only controls provided will be a choice of where your record file will be stored, and a choice between light mode or dark mode in terms of colour scheme.</p>
               <br>
