--- a/content/ideal_job.html
+++ b/content/ideal_job.html
@@ -10,7 +10,7 @@
 
   <body>
     <div id="wrapper">
-      <div id="banner"></div>
+      <div id="banner"><p>Jake Kent - Personal Profile</p></div>
 
       <div id="navbar">
         <button id="personal_information" onclick="window.location.href='../index.html'">Personal Information</button>
@@ -28,7 +28,7 @@
               <p>My current ideal job would be as a full stack developer. The most appealing aspect of becoming a full stack developer is that you are required to engage with your creative side to design appealing front-end applications that entice customers to use your product. While being creative, a full stack developer also has to create and maintain the back-end code of a web application to ensure that their hard design work serves its function and serves that function correctly. The goal of each project is to create a seamless user experience at the front-end of a web application, as the back-end efficiently manages website functionality, and information requests made by users.</p>
               <p>Full stack developers are expected to understand UI/UX design, colour theory, and layout and typography theories while also mastering CSS, HTML, and JavaScript, in order to build enticing front-end environments. To balance these creative skills, full stack developers need to master a database language (SQL, PostgreSQL. MongoDB), cybersecurity and network configurations, and master testing frameworks (Selenium) to automate website functionality tests. To achieve their goals a full stack developer will have to have exceptional knowledge of a number of programming languages like Java, Ruby, and Python also</p>
               <p>Currently I’ve focused my skills towards front-end development, learning CSS, HTML, and JavaScript. In my spare time I have been creating mock-up websites for dummy companies to explore different layouts and colour schemes. On top of these skills I have also been exploring Python and the Django framework.</p>
-              <p>To increase my skill set in the future I intend on building websites for friends businesses and creating templates to streamline my work if I begin taking freelance work.</p>
+              <p>To increase my skill set in the future I intend on building websites for friends' businesses and creating templates to streamline my work if I begin taking freelance work.</p>
               <p>An example of a full stack developer role can be seen here: <a href="./full_stack_job.pdf">click this link</a></p>
             </section>
           </article>
