--- a/content/project_idea.html
+++ b/content/project_idea.html
@@ -112,6 +112,10 @@
               <p>As the project itself is ultimately quite a simple framework it would serve as a great foundation from which to build in extra features and productivity methods, such as including licence free lectures from productivity experts.</p>
               <br>
             </section>
+            <section id="references">
+              <h2>References</h2>
+              <p></p>
+            </section>
           </article>
         </div>
       </div>
