--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                   <td>
                     <p>Name: Jake Kent</p>
                     <p>Student Number: s3905550</p>
-                    <p>Student Email: s3905550@student.rmit.edu.au</p>
+                    <p>Student Email: <a href="mailto:s3905550@student.rmit.edu.au">s3905550@student.rmit.edu.au</a></p>
+                    <p>GitHub Public Repository URL: <a href="https://github.com/ElJake0/eljake0.github.io">https://github.com/ElJake0/eljake0.github.io</a></p>
+                    <p>GitHub Pages URL: <a href="https://eljake0.github.io/">https://eljake0.github.io/</a></p>
                   </td>
                 </tr>
               </table>
