Cleaned up site to hand in

--- a/content/personal_profile.html
+++ b/content/personal_profile.html
@@ -42,7 +42,7 @@ In future team situations I will definitely attempt to alter this behaviour to a
 </p>
                     <p class="question">How should you take this into account when forming a team?</p>
                     <p class="answer">When forming a team I aim to take a role that is supervisory so that I am responsible for a significant contingent of work. While I know that I can handle taking the responsibility of the workload, I feel that I am also able to pragmatically dissect the work for others into smaller portions and assess the skill levels of my team members to be able to complete the tasks on time. I will have to be more conscious of the amount of work I take and not to take too much of what could more effectively be delegated.</p>
-                    <a href="https://www.16personalities.com/">Take the Test</a>
+                    <a href="https://www.16personalities.com/">Take the Test</a> (16 Personalities 2021)
                   </td>
                 </tr>
                 <tr>
@@ -59,7 +59,7 @@ In future team situations I will definitely attempt to alter this behaviour to a
 </p>
                     <p class="question">How should you take this into account when forming a team?</p>
                     <p class="answer">When forming a team I should take into account the attitudes of potential team members and how responsive they are to differing ideas and speculations. It would serve the project better for me to be working with team members who are receptive and I feel will comfortably receive my suggestions or at least be able to logically describe the benefits of the chosen solution.</p>
-                    <a href="http://emtrain.eu/learning-styles/">Take the Test</a>
+                    <a href="http://emtrain.eu/learning-styles/">Take the Test</a> (EMTRAIN)
                   </td>
                 </tr>
                 <tr>
@@ -75,10 +75,18 @@ In future team situations I will definitely attempt to alter this behaviour to a
                     <p class="answer">In a team I think I will now focus more on how I can better connect with people and empower them to do their best. In the future I will strive to place myself in more front-line leadership roles and focus on being there for team members in need.</p>
                     <p class="question">How should you take this into account when forming a team</p>
                     <p class="answer">When forming a team I will put my hand up for leadership positions, especially when other members feel uncomfortable in the role. I will also make an effort to be available to team members whenever they are having issues or are just finding the workload too intensive.</p>
-                    <a href="https://eml.usc.edu/leadership-style-quiz">Take the Test</a>
+                    <a href="https://eml.usc.edu/leadership-style-quiz">Take the Test</a> (University of Southern California 2021)
                   </td>
                 </tr>
               </table>
+            </section>
+            <section id="references">
+              <h2>References</h2>
+              <p class="ref">16 Personalities, 2021, viewed 17 March 2021, <a>&lt<a href="https://www.16personalities.com/">https://www.16personalities.com/</a>&gt</a></p>
+              <p class="ref">16 Personalities, Advocate Personality INFJ-A/INFJ-T (What’s the Difference?), 2021, viewed 17 March 2021, <a>&lt<a href="https://www.16personalities.com/infj-personality">https://www.16personalities.com/infj-personality</a>&gt</a></p>
+              <p class="ref">EMTRAIN, n.d., viewed 17 March 2021, <a>&lt<a href="http://emtrain.eu/learning-styles/">http://emtrain.eu/learning-styles/</a>&gt</a></p>
+              <p class="ref">University of Southern California, Interactive Leadership Style Assessment, 2021, viewed 17 March 2021, <a>&lt<a href="https://eml.usc.edu/leadership-style-quiz">https://eml.usc.edu/leadership-style-quiz</a>&gt</a></p>
+              <p class="ref">University of Southern California, Front-Line Leadership Style: 7 Tips for Front-line Leaders, 2021, viewed 17 March 2021,<a>&lt<a href="https://eml.usc.edu/blog/frontline-leadership-style">https://eml.usc.edu/blog/frontline-leadership-style</a>&gt</a></p>
             </section>
           </article>
         </div>
