--- a/content/project_idea.html
+++ b/content/project_idea.html
@@ -90,11 +90,11 @@
               <p><a class="bold">Computers:</a> To develop the application on.</p>
               <p><a class="bold">Mobile devices (phones/tablets):</a> To test the application during development.</p>
               <p><a class="bold">Preferred Python IDE:</a> To build and execute our Python code, I prefer PyCharm.</p>
-              <p><a class="bold">Kivy:</a> A Python library that is used to develop cross-platform applications. Kivy is compatible with Android, iOS, Windows, Linux, and MacOS, and provides flexible UI elements to keep the app looking modern.</p>
-              <p><a class="bold">Time:</a> A built-in Python library that interfaces with the device’s internal clock.</p>
-              <p><a class="bold">OS:</a> A built-in Python library that will enable the app to interact with the device’s file system. This will be required to save and retrieve any files that track the user’s progress.</p>
-              <p><a class="bold">playsound:</a> A Python library used to output audio from a file.</p>
-              <p><a class="bold">Pandas:</a> A Python library used for data analysis, this would be used in combination with the saved user progress files to show detailed graphs.</p>
+              <p><a class="bold">Kivy:</a> A Python library that is used to develop cross-platform applications. Kivy is compatible with Android, iOS, Windows, Linux, and MacOS, and provides flexible UI elements to keep the app looking modern (Kivy 2021).</p>
+              <p><a class="bold">Time:</a> A built-in Python library that interfaces with the device’s internal clock (The Python Software Foundation 2021).</p>
+              <p><a class="bold">OS:</a> A built-in Python library that will enable the app to interact with the device’s file system. This will be required to save and retrieve any files that track the user’s progress (The Python Software Foundation 2021).</p>
+              <p><a class="bold">playsound:</a> A Python library used to output audio from a file (Pythonbasics 2021).</p>
+              <p><a class="bold">Pandas:</a> A Python library used for data analysis, this would be used in combination with the saved user progress files to show detailed graphs (Pandas 2021).</p>
               <br>
             </section>
             <section id="project_skills">
@@ -114,7 +114,11 @@
             </section>
             <section id="references">
               <h2>References</h2>
-              <p></p>
+              <p><a class="ref">Kivy, 2021, viewed 19 March 2021 &lt<a href="https://kivy.org/#home">https://kivy.org/#home</a>&gt</a></p>
+              <p><a class="ref">The Python Software Foundation, os - Miscellaneous operating system interfaces, 2021, viewed 19 March 2021 &lt<a href="https://docs.python.org/3/library/os.html?highlight=os#module-os">https://docs.python.org/3/library/os.html?highlight=os#module-os</a>&gt</a></p>
+              <p><a class="ref">The Python Software Foundation, time - Time access and conversions, 2021, viewed 19 March 2021 &lt<a href="https://docs.python.org/3/library/time.html">https://docs.python.org/3/library/time.html</a>&gt</a></p>
+              <p><a class="ref">Pythonbasics, Play sound in Python, 2021, viewed 19 March 2021 &lt<a href="https://pythonbasics.org/python-play-sound/">https://pythonbasics.org/python-play-sound/</a>&gt</a></p>
+              <p><a class="ref">Pandas, pandas documentation, 2 March 2021, viewed 19 March 2021 &lt<a href="https://pandas.pydata.org/pandas-docs/stable/">https://pandas.pydata.org/pandas-docs/stable/</a>&gt</a></p>
             </section>
           </article>
         </div>
